# OTA-ESP32-STM32

./: .gitignore  CMakeLists.txt  README  README.md  sdkconfig
main/: CMakeLists.txt
main/components/SH1106/: I2C_OLED.c  I2C_OLED.h  font.h
main/inc/: CAN_NODE.h  GPIO_OTA.h  STA_AP.h  UART_NODE.h  app.h  app_internal.h  can.h  gpio.h  oled.h  stm32ota.h  uart.h  wifi.h
main/src/: CAN_NODE.c  GPIO_OTA.c  STA_AP.c  UART_NODE.c  app.c  app_internal.c  can.c  file_server.c  gpio.c  http_server.c  mount.c  oled.c  stm32ota.c  uart.c  wifi.c
main/webpage/: about.html  list.html  ota.html  script.js  style.css  wifimanager.html
