idf_component_register(SRCS "src/app.c" 
                            "src/mount.c" 
                            "src/STA_AP.c" 
                            "src/CAN_NODE.c" 
                            "src/GPIO_OTA.c" 
                            "src/stm32ota.c"
                            "src/file_server.c" 
                            "src/UART_NODE.c"
                            "components/SH1106/I2C_OLED.c"
                    INCLUDE_DIRS "."
                                "inc" 
                                "components/SH1106"                                 
                    EMBED_FILES "webpage/about.html"
                                "webpage/list.html" 
                                "webpage/ota.html" 
                                "webpage/wifimanager.html" 
                                "webpage/style.css"
                                "webpage/favicon.ico")
